src/scss/parts/cards.scss
.cases-item {
    display: flex;
    flex-direction: column;
    gap: 30px;

    @media (max-width:124px) {
        gap: 20px;
    }

    .img {
        position: relative;
        padding-bottom: 50%;
        min-height: 225px;

        video {}

        img {
            position: absolute;
            left: 0;
            top: 0;
            width: 100%;
            height: 100%;
            object-fit: cover;
        }
    }

    // .cases-item__labels
    &__labels {
        margin-top: -10px;
        display: flex;
        gap: 5px;

        @media (max-width:1024px) {
            margin-top: 0;
        }

        label {
            display: flex;
            align-items: center;
            justify-content: center;
            text-align: center;
            padding: 7px 10px;
            border-radius: 100px;
            font-size: 15px;
            // font-weight: 500;
            border: 1px solid rgba($color: $white, $alpha: 0.2);

            @media (max-width:1024px) {
                font-size: 13px;
            }
        }
    }

    ol {
        @media (min-width:1025px) {
            row-gap: 7px;
        }

        div {
            display: flex;
            flex-direction: column;
            gap: 30px;

            @media (max-width:1024px) {
                gap: 20px;
            }
        }

        li {
            display: flex;
            flex-direction: column;
            gap: 5px;

            label {
                opacity: 0.4;
                font-size: 15px;

                @media (max-width:1024px) {
                    font-size: 13px;
                }
            }

            span {
                line-height: 130%;
            }
        }
    }
}

.reviews-item {
    display: flex;
    flex-direction: column;
    min-height: 100%;
    gap: 20px;
    padding: 50px 40px;
    background-color: rgba($color: $white, $alpha: 0.03);

    @media (max-width:1024px) {
        padding: 30px 20px;
        gap: 10px;
    }

    & > div {
        display: flex;
        align-items: center;
        justify-content: space-between;
        gap: 20px;
    }

    span {
        margin-bottom: -10px;
        line-height: 130%;
        @include adaptive-value('font-size', 26, 20, 1);

        @media (max-width:1024px) {
            margin-bottom: -5px;
        }
    }

    label {
        font-size: 15px;
        opacity: 0.4;
        margin-bottom: 20px;

        @media (max-width:1024px) {
            margin-bottom: 10px;
            font-size: 13px;
        }
    }

    p {
        opacity: 0.4;
        line-height: 130%;
    }

    .img {
        width: 64px;
        height: 64px;

        @media (max-width:1024px) {
            width: 40px;
            height: 40px;
        }

        img,
        picture {
            width: 100%;
            height: 100%;
            object-fit: cover;
            border-radius: 50%;
        }
    }

    .rating {
        width: 98px;

        @media (max-width:1024px) {
            width: 80px;
        }
    }
}

.approach-item {
    display: flex;
    flex-direction: column;
    min-height: 500px;
    padding: 40px;
    background-color: rgba($color: $white, $alpha: 0.03);

    @media (max-width:1024px) {
        padding: 20px;
        min-height: 200px;
    }

    span {
        opacity: 0.4;
        margin-bottom: 20px;
        line-height: 130%;

        @media (max-width:1024px) {
            margin-bottom: 10px;
        }
    }

    h4 {
        flex: 1 1 auto;
        margin-bottom: 40px;
    }

    p {
        opacity: 0.4;
        line-height: 130%;
    }
}

.types-item {
    display: flex;
    flex-direction: column;
    position: relative;
    gap: 20px;
    counter-increment: type;
    padding-left: 35%;
    padding-top: 40px;
    border-top: 1px solid rgba($color: $white, $alpha: 0.2);

    @media (max-width:1024px) {
        padding-left: 0;
        padding-top: 20px;
    }

    &:before {
        @media (min-width:1025px) {
            position: absolute;
            left: 0;
            top: 40px;
        }

        content: counter(type);
        width: 50px;
        height: 50px;
        border: 1px solid;
        opacity: 0.4;
        text-align: center;
        display: flex;
        align-items: center;
        justify-content: center;
        line-height: 130%;

        @media (max-width:1024px) {
            margin-bottom: 20px;
            width: 34px;
            height: 34px;
        }
    }

    .price {
        padding-bottom: 20px;
        border-bottom: 1px solid rgba($color: $white, $alpha: 0.2);
        line-height: 130%;

        @media (max-width:1024px) {
            margin-top: -10px;
        }
    }

    p {
        opacity: 0.4;
        max-width: 420px;
        line-height: 130%;
    }

    ._btn {
        margin-top: 20px;
        padding: 15px;
        gap: 15px;

        @media (min-width:1025px) {
            width: 180px;
        }

        @media (max-width:1024px) {
            margin-top: 0;
            padding: 10px;
            gap: 0;
        }
    }
}

.tarrifs-item {
    min-height: 100%;
    display: flex;
    flex-direction: column;
    padding: 40px;
    border: 1px solid rgba($color: $white, $alpha: 0.2);
    overflow: hidden;

    @media (max-width:1024px) {
        padding: 20px;
    }

    h4 {
        margin-bottom: 10px;
    }

    h3 {}

    .text-box {
        width: 100%;
        flex: 1 1 auto;
        margin-top: 40px;
        padding-top: 40px;
        position: relative;
        margin-bottom: 120px;

        @media (max-width:1024px) {
            padding-top: 20px;
            margin-top: 20px;
            margin-bottom: 80px;
        }

        &:before {
            position: absolute;
            content: '';
            top: 0;
            left: -40px;
            width: calc(100% + 80px);
            height: 1px;
            background-color: rgba($color: $white, $alpha: 0.2);
        }
    }

    ._btn {
        width: 100%;
    }

    &._active {
        background-color: $white;

        h3,
        h4 {
            color: $black;
        }

        .text-box {
            &:before {
                background-color: rgba($color: $black, $alpha: 0.2);
            }

            li {
                color: rgba($color: $black, $alpha: 0.4);

                &:before {
                    background-color: $black;
                }
            }
        }

        ._btn {
            width: 100%;
        }
    }
}

.contacts-item {
    display: flex;
    flex-direction: column;
    gap: 40px;
    min-height: 100%;

    @media (max-width:1024px) {
        gap: 20px;
    }

    &:not(:has(iframe)) {
        border-bottom: 1px solid rgba($color: $white, $alpha: 0.2);
        padding-bottom: 40px;
    }

    a:first-child {
        @include adaptive-value('font-size', 60, 24, 1);
        transition: opacity 0.3s ease 0s;

        &:hover {
            opacity: 0.4;
        }
    }

    p {
        opacity: 0.4;
        flex: 1 1 auto;
        line-height: 130%;
    }

    ._btn {
        margin-top: 40px;

        @media (max-width:1024px) {
            margin-top: 20px;
            gap: 0;
            padding: 10px;
        }
    }

    iframe {
        width: 100%;
        height: 100%;
        min-height: 360px;
        filter: grayscale(1);
    }
}

.posts-item {
    display: flex;
    gap: 40px;
    border-bottom: 1px solid rgba($color: $white, $alpha: 0.2);
    min-height: 240px;
    max-height: 240px;

    @media (max-width:1024px) {
        flex-direction: column;
        gap: 10px;
        border-bottom: 0;
        min-height: 0;
        max-height: none;

        &:not(:last-child) {
            margin-bottom: 40px;
        }
    }

    &:hover {
        .icon {
            background-color: $white;

            svg {
                stroke: $black;
            }
        }

        .img {
            opacity: 0.9;
        }

        h4 {
            opacity: 0.4;
        }
    }

    .img {
        flex: 0 0 auto;
        width: 312px;
        display: block;
        transition: opacity 0.3s ease 0s;
        padding: 40px 0;

        @media (max-width:1200px) {
            width: 280px;
        }

        @media (max-width:1024px) {
            width: 100%;
            max-width: 500px;
            padding: 0;
        }

        img,
        picture {
            min-height: 100%;
            object-fit: cover;
        }
    }

    // .posts-item__title
    &__title {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        gap: 20px;
        flex: 1 1 auto;
        padding: 40px 0;

        @media (max-width:1024px) {
            flex: unset;
            padding: 0;
        }

        h4 {
            max-width: 820px;
            transition: opacity 0.3s ease 0s;
        }

        .meta {
            text-align: center;
            display: flex;
            align-items: center;
            justify-content: center;
            padding: 7px 10px;
            font-size: 15px;
            // font-weight: 500;
            border: 1px solid rgba($color: $white, $alpha: 0.2);
            border-radius: 100px;
            width: fit-content;

            @media (max-width:1024px) {
                font-size: 13px;
            }
        }
    }

    .icon {
        flex: 0 0 auto;
        width: 240px;
        height: 240px;
        display: flex;
        align-items: center;
        justify-content: center;
        transition: background-color 0.3s ease 0s;

        @media (max-width:1024px) {
            width: 100%;
            height: 60px;
            margin-top: 30px;
            border: 1px solid rgba($color: $white, $alpha: 0.2);
        }

        img,
        svg {
            width: 16px;
            height: 16px;
            flex: 0 0 auto;
            stroke: $white;
            transition: stroke 0.3s ease 0s;
        }
    }
}

.product-item {
    display: flex;
    flex-direction: column;
    gap: 20px;

    .img {
        height: 280px;
        transition: opacity 0.3s ease 0s;

        @media (min-width:1025px) {
            padding: 20px;
            background-color: rgba($color: $white, $alpha: 0.03);
        }

        @media (max-width:1024px) {
            height: auto;
            min-height: 200px;
        }

        &:hover {
            opacity: 0.9;
        }

        img,
        picture {
            height: 100%;
            object-fit: contain;
        }
    }

    div {
        display: flex;
        flex-direction: column;
        // justify-content: space-between;
        gap: 20px;
        padding-bottom: 20px;
        border-bottom: 1px solid rgba($color: $white, $alpha: 0.2);
        flex: 1 1 auto;

        a {
            transition: opacity 0.3s ease 0s;

            &:hover {
                opacity: 0.4;
            }
        }

        .price {
            @include adaptive-value('font-size', 26, 20, 1);
            white-space: nowrap;
        }
    }

    p {
        line-height: 130%;
        opacity: 0.4;

        @media (min-width:1025px) {
            max-width: 80%;
        }
    }

    ._btn {
        margin-top: 20px;

        @media (max-width:1024px) {
            margin-top: 0;
            padding: 10px;
        }
    }
}

